--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   bloc: ^7.0.0
   flutter_bloc: ^7.0.0
   dio: ^4.0.0
+  hexcolor: ^2.0.3
+  shared_preferences: ^2.0.6
+
 
 dev_dependencies:
   flutter_test:
